сделал чтобы заголовок был активным при клике и появлялось строка ввода для задачи

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
 
         <div class="start">
-            <h2>Начать</h2>
+            <h2 class="title-start" id="start">Начать</h2>
 
             <div class="input-group">
               <input type="text" placeholder="Новая задача..." required id="taskInput" name="text"/>
